# LocalVoice

./: .gitignore  LICENSE  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-03-11-localvoice-mvp.md
docs/superpowers/specs/: 2026-03-11-localvoice-mvp-design.md
infos/: LocalVoice_PRD.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  hotkey.rs  inject.rs  lib.rs  main.rs  model_manager.rs  overlay.rs  whisper.rs
src/components/: ModelManager.tsx  Overlay.tsx  Settings.tsx  SetupWizard.tsx
src/hooks/: useRecording.ts  useSettings.ts
src/lib/: tauri.ts
src/styles/: globals.css
